--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "nodesession",
+  "name": "node-session-admin-panel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "build": "echo \"No build specified\" && exit 1",
+    "test": "echo \"No test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hk9099/node-session-admin-panel.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hk9099/node-session-admin-panel/issues"
+  },
+  "homepage": "https://github.com/hk9099/node-session-admin-panel#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
