--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "node-session-admin-panel",
+  "name": "nodesession",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "echo \"No build specified\" && exit 1",
-    "test": "echo \"No test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hk9099/node-session-admin-panel.git"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hk9099/node-session-admin-panel/issues"
-  },
-  "homepage": "https://github.com/hk9099/node-session-admin-panel#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
