--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
@@ -18,13 +19,17 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "knex": "^2.4.2",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
+    "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.10.0",
+    "uuid": "^9.0.0"
   }
 }
